--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "evolution-manager",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.1.0",
+  "main": "dist",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
