--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evolution-manager",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "dist",
   "scripts": {
     "dev": "vite",
@@ -8,11 +8,16 @@
     "preview": "vite preview",
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
+  "directories": {
+    "bin": "./bin"
+  },
   "dependencies": {
     "@mdi/font": "7.0.96",
     "axios": "^1.6.0",
     "core-js": "^3.29.0",
+    "optimist": "^0.6.1",
     "pinia": "^2.0.0",
+    "pm2": "^5.3.0",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
@@ -22,6 +27,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.3.0",
+    "node-async-exec": "^1.2.0",
     "sass": "^1.60.0",
     "unplugin-fonts": "^1.0.3",
     "vite": "^4.2.0",
