--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evolution-manager",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "main": "dist",
   "scripts": {
     "dev": "vite",
@@ -21,7 +21,8 @@
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
-    "vuetify": "^3.1.0"
+    "vuetify": "^3.1.0",
+    "vite": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
@@ -30,7 +31,6 @@
     "node-async-exec": "^1.2.0",
     "sass": "^1.60.0",
     "unplugin-fonts": "^1.0.3",
-    "vite": "^4.2.0",
     "vite-plugin-vuetify": "^1.0.0"
   }
 }
