fix: vite version install

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "evolution-manager",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "main": "dist",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
