--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@vitejs/plugin-vue": "^4.0.0",
     "axios": "^1.6.0",
     "core-js": "^3.29.0",
+    "eslint": "^8.37.0",
+    "eslint-plugin-vue": "^9.3.0",
     "optimist": "^0.6.1",
     "pinia": "^2.0.0",
     "pm2": "^5.3.0",
     "roboto-fontface": "*",
-    "vue": "^3.2.0",
-    "vue-router": "^4.0.0",
-    "vuetify": "^3.4.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "vite-plugin-vuetify": "^1.0.0",
-    "eslint": "^8.37.0",
-    "eslint-plugin-vue": "^9.3.0",
     "sass": "^1.60.0",
     "unplugin-fonts": "^1.0.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-vuetify": "^1.0.0",
+    "vue": "^3.2.0",
+    "vue-router": "^4.0.0",
+    "vue3-markdown": "^1.1.9",
+    "vuetify": "^3.4.0"
   }
 }
