add verbose to cli

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "evolution-manager",
+  "description": "Evolution Manager is an open-source interface for managing the Evolution API, simplifying the creation and administration of API instances with advanced features and diverse integrations.",
   "version": "0.3.12",
   "main": "dist",
   "engines": {
