--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - traefik.http.routers.evolution-manager.rule=Host(`manager.yourdomain.com`) #Replace this with the subdomain that you wishes, dont forget to point the domain to your VPS ip address
       - traefik.http.routers.evolution-manager.entrypoints=https # Some people name the entrypoint as "websecure" look at your original traefik compose file to find the correct entrypoint name
       - traefik.http.routers.evolution-manager.tls.certresolver=letsencrypt # Some people name the certResolver as "le" look at your original traefik compose file to find the correct certResolver name
-    network:
+    networks:
       - traefik_public_example_network
 networks:
   traefik_public_example_network:
