--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pm2": "^5.3.0",
     "roboto-fontface": "*",
     "sass": "^1.60.0",
+    "semver": "^7.5.4",
     "unplugin-fonts": "^1.0.3",
     "vite": "^4.2.0",
     "vite-plugin-vuetify": "^1.0.0",
