--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vite": "^4.2.0",
     "vite-plugin-vuetify": "^1.0.0",
     "vue": "^3.2.0",
+    "vue-i18n": "^9.8.0",
     "vue-router": "^4.0.0",
     "vue3-markdown": "^1.1.9",
     "vuetify": "^3.4.0"
